modules/vpc/main.tf
resource "aws_vpc" "aws-vpc" {
    cidr_block = var.vpc_cidr
    enable_dns_support = true
    enable_dns_hostnames = true
    tags = { Name = "${var.name_prefix}-vpc" }
}

resource "aws_subnet" "public_subnets" {
    count = length(var.public_subnet_cidrs)
    vpc_id = aws_vpc.aws-vpc.id
    cidr_block = var.public_subnet_cidrs[count.index]
    availability_zone = var.availability_zones[count.index]
    map_public_ip_on_launch = true
    tags = { Name = "${var.name_prefix}-public-subnet-${count.index}" }
}

resource "aws_subnet" "private_subnets" {
    count = length(var.private_subnet_cidrs)
    vpc_id = aws_vpc.aws-vpc.id
    cidr_block = var.private_subnet_cidrs[count.index]
    availability_zone = var.availability_zones[count.index]
    map_public_ip_on_launch = false
    tags = { Name = "${var.name_prefix}-private-subnet-${count.index}" }
}

resource "aws_internet_gateway" "igw" {
    vpc_id = aws_vpc.aws-vpc.id
    tags = { Name = "${var.name_prefix}-igw" }
}

resource "aws_eip" "eip" {
    domain = "vpc"
    tags = { Name = "${var.name_prefix}-eip" }
}

resource "aws_nat_gateway" "nat_gw" {
    allocation_id = aws_eip.eip.id
    subnet_id = aws_subnet.public_subnets[0].id
    tags = { Name = "${var.name_prefix}-nat-gw" }
}

resource "aws_route_table" "public" {
    vpc_id = aws_vpc.aws-vpc.id
    route {
        cidr_block = "0.0.0.0/0"
        gateway_id = aws_internet_gateway.igw.id
    }
    tags = { Name = "${var.name_prefix}-public-rt" }
}
resource "aws_route_table" "private" {
    vpc_id = aws_vpc.aws-vpc.id
    route {
        cidr_block = "0.0.0.0/0"
        nat_gateway_id = aws_nat_gateway.nat_gw.id
    }
    tags = { Name = "${var.name_prefix}-private-rt" }
}
resource "aws_route_table_association" "public" {
    count          = length(var.public_subnet_cidrs)
    subnet_id      = aws_subnet.public_subnets[count.index].id
    route_table_id = aws_route_table.public.id
}

resource "aws_route_table_association" "private" {
    count          = length(var.private_subnet_cidrs)
    subnet_id      = aws_subnet.private_subnets[count.index].id
    route_table_id = aws_route_table.private.id
}
